added flag emoji

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
           Software Developer <span class="dot">•</span>
           I love clean and quality code <span class="dot">•</span>
           An avid reader and lover of poetry <span class="dot">•</span>
-          Kampala, Uganda <span role="img" aria-label="Uganda">UG</span>
+          Kampala, Uganda <span role="img" aria-label="Uganda">🇺🇬</span>
         </div>
         <div class="contacts">
           <a href="https://github.com/samsonroyal" target="_blank" rel="noopener noreferrer">
