made changes to footer

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
           Software Developer <span class="dot">•</span>
           I love clean and quality code <span class="dot">•</span>
           An avid reader and lover of poetry <span class="dot">•</span>
-          Kampala, Uganda <span role="img" aria-label="Uganda">UG</span>
+          Kampala, Uganda <span role="img" aria-label="Uganda">🇺🇬</span>
         </div>
         <div class="contacts">
           <a href="https://github.com/samsonroyal" target="_blank" rel="noopener noreferrer">
@@ -115,9 +115,71 @@
       <!-- Education widget -->
       <codersrank-education username="samsonroyal"></codersrank-education>
     </section>
+    
+    <!-- Contact Form-->
+    <section>
+      
+    <div id="contact " class="form-1 bg-gray ">
+      <div class="container ">
+          <div class="row ">
+              <div class="col-lg-12 ">
+                  <h2>Contact Form</h2>
+                  <p class="p-heading ">For any questions in regards to websites, consultations or requests for coding sessions please don't hesitate to get in touch with me. </p>
+                  <p>You can send me a message using this form.👇</p>
+              </div>
+              <!-- end of col -->
+          </div>
+          <!-- end of row -->
+          <div class="row ">
+              <div class="col-lg-12 ">
+
+                  <!-- Contact Form -->
+                  <form name="contact" id="contactForm " netlify>
+                      <div class="form-group ">
+                          <input type="text " class="form-control-input " id="YourName ">
+                          <label class="label-control " for="Your name ">Name</label>
+                      </div>
+                      <div class="form-group ">
+                          <input name="email address" type="email " class="form-control-input " id="emailAddress ">
+                          <label class="label-control " for="Your email ">Email</label>
+                      </div>
+                      <div class="form-group ">
+                          <textarea name="your message" class="form-control-textarea " id="YourMessage "></textarea>
+                          <label class="label-control " for="message ">Please write your message here.</label>
+                      </div>
+                      <div class="form-group ">
+                          <button type="submit " class="btn-solid-lg form-control-submit-button ">Send</button>
+                      </div>
+                  </form>
+                  <!-- end of contact form -->
+
+              </div>
+              <!-- end of col -->
+          </div>
+          <!-- end of row -->
+      </div>
+      <!-- end of container -->
+  </div>
+  <!-- end of form-1 -->
+  <!-- end of contact -->
+  </section>
 
     <footer>
       <!-- Generic footer copy -->
+      <!-- Copyright -->
+    <div class="copyright bg-gray ">
+      <div class="container ">
+          <div class="row ">
+              <div class="col-lg-12 ">
+                  <p class="p-small ">Copyright © 2022 <a class="no-line " href="#"> Were Samson Bruno</a></p>
+              </div>
+              <!-- end of col -->
+          </div>
+          <!-- enf of row -->
+      </div>
+      <!-- end of container -->
+  </div>
+  <!-- end of copyright -->
     </footer>
   </main>
   
