--- a/index.html
+++ b/index.html
@@ -118,12 +118,12 @@
     
     <!-- Contact Form-->
     <section>
-      
+        <h2>Get in touch</h2>
     <div id="contact " class="form-1 bg-gray ">
       <div class="container ">
           <div class="row ">
               <div class="col-lg-12 ">
-                  <h2>Contact Form</h2>
+                  <h3>Contact Form</h3>
                   <p class="p-heading ">For any questions in regards to websites, consultations or requests for coding sessions please don't hesitate to get in touch with me. </p>
                   <p>You can send me a message using this form.👇</p>
               </div>
